projects/nanousd-labs/nanousd/tests/usda/invalid/int_as_uint64_value.usda
#usda 1.0

def Scope "T"
{
    int tooLarge = 9999999999999
}
